crates/rtb-core/tests/trybuild/releasesource_non_exhaustive.stderr
error[E0004]: non-exhaustive patterns: `_` not covered
  --> tests/trybuild/releasesource_non_exhaustive.rs:6:11
   |
 6 |     match r {
   |           ^ pattern `_` not covered
   |
note: `ReleaseSource` defined here
  --> src/metadata.rs
   |
   | pub enum ReleaseSource {
   | ^^^^^^^^^^^^^^^^^^^^^^
   = note: the matched value is of type `ReleaseSource`
   = note: `ReleaseSource` is marked as non-exhaustive, so a wildcard `_` is necessary to match exhaustively
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
 9 ~         ReleaseSource::Direct { .. } => "direct",
10 ~         _ => todo!(),
   |
